# lkn

./: .anjuta_sym_db.db  package.json
.anjuta/session/: anjuta.session
lkn/: lkn.cbp  lkn.depend  lkn.layout  main.cpp
lkn/lkn/: lkn.sln
lkn/lkn/lkn/: Program.cs  Startup.cs
lkn/lkn/lkn/Pages/: About.cshtml.cs  Contact.cshtml.cs  Error.cshtml.cs  Index.cshtml.cs  _Layout.cshtml  _ViewImports.cshtml
lkn/lkn/lkn/Properties/: launchSettings.json
lkn/purpose/: click.cpp
lkn/purpose/ambient/: socialist.cpp
lkn/purpose/checklink/: link.cpp
lkn/purpose/port/: input.cpp
lkn/purpose/windcool/: cool.cpp
matrix/gnu/test/: configure.ac  package-lock.json
src/: Makefile.am  main.cc
